replace System.err.println to log.error